--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
     </div>
 </nav>
 
+<div class="container-fluid">
   <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
@@ -37,7 +38,8 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <a href="https://google.com" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Log in</a>
   </form>
+</div>
 
 </html>
