--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
   <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
