badge added, icon added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,27 +3,27 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>FitDavis</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">FitDavis</a>
+    <a class="navbar-brand" href="/">FitDavis</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Balance </a>
+        <a class="nav-link" href="#">Balance </a>
         </li>
-      </ul>
+    </ul>
     </div>
 </nav>
 
-<div class="container">
+<div class="container-xl">
   <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
@@ -38,7 +38,7 @@
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Check me out</label>
     </div>
-    <a href="https://google.com" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Log in</a>
+    <a href="/foods" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Log in</a>
   </form>
 </div>
 
